css/styles-smartphone.css
@media only screen 
	  and (max-width : 320px){

.ataglancepanelshadow, .ataglancepanelnoshadow, .featurepanelshadow, .section-inner {
	width: 300px;
}

.section-inner {
	margin: 0px;
}

.section-innerx {
	overflow-x: hidden;
	width: auto;
}

.mobileonly {
	display: block;
}



/** NAVIGATION
------------------------------*/

#navigation {
	background-image: url(../images/mobile-navigation.png);
	background-size: 320px 44px;
	background-position: top left;
}

.menu {
	display: none;
}

#menuicon {
	display: block;
	width: 23px;
	height: 19px;
	background: url(../images/icon-menu@2x.png);
	background-size: 23px 19px;
	background-repeat: no-repeat;
	float: right;
	margin-right: 10px;
	margin-top: 12px;
}

#mobilemenu {
	position: absolute;
	left: 0px;
	top: 0px;
	width: 320px;
	height: 288px;
	background: url(../images/bg-menu-iphone.png);
	background-size: 320px 288px;
	background-repeat: no-repeat;
}

#menuclose {
	float: right;
	width: 47px;
	height: 44px;
}

#mobilemenu ul {
	clear: right;
	padding: 13px;
}

#mobilemenu a {
	color: white;
	display: block;
	width: 294px;
	height: 27px;
	padding-top: 5px;
	border-bottom: 1px solid #615ca1;
}

.menu-item a {
	background: none;
	text-indent: 0px;
	line-height: 18px;
}

#appstorebadge a {
	text-indent: -9999px;
	border: none;
	width: 129px;
	height: 37px;
	background-image: url(../images/menu-badge-iphone.png);
	background-size: 129px 37px;
	background-repeat: no-repeat;
	margin-top: 10px;
}

#appstorebadge a:hover {
	background-position: 0px 0px !important;
}


/** HERO
------------------------------*/


#hero {
	height: 529px;
	padding: 0px;
}

.bar-image {
	background-image:url(../images/bg-hero-1.2-iphone.png);
	background-size: 320px 485px;
	background-position: 0px 44px;
	background-repeat: no-repeat;
	height: auto;
}

.bar-image h1  {
	padding-right: 0px;
	padding-top: 334px;
	font-size: 26px;
}

.bar-image h4  {
	padding-right: 0px;
	font-size: 16px;
}

.herobuttons {
	width: 320px; 
}


/** KEY FEATURES
------------------------------*/

#key-features {
	height: 270px;
}

.bicepscurldude {
	display: none;
}

#key-features .module p {
	font-size: 13px;
}

#key-features .module {
	width: 300px;
	height: 60px;
	overflow: hidden;
	margin-left: 20px;
}


/** FEATURE PANELS
------------------------------*/

#featuretodos, #featurevisualweightselectors, #featureresttimers, #featureexercisemanual, #featurehistory {
	display: none;
}

.featurepaneltext, #textpanelweights, #featuretextexercisemanual, #featuretexthistory {
	width: auto;
	height: auto;
	margin-left: 20px;
	margin-right: 20px;
	float: none;
}

.featurepaneltext h2 {
	font-weight: bold;
	margin-bottom: 3px;
	padding-top: 20px;
	font-size: 20px;
}

.featurepaneltext h3 {
	margin-bottom: 10px;
	font-size: 15px;
}

.featurepaneltext p {
	line-height: 20px;
	font-size: 14px;
}

.featurepanelshadow {
	background-image: url(../images/bg-featurepanelshadow-mobile.png);
	background-size: 320px 154px;
	width: auto;
	margin: 0px;
	height: auto;
	background-color: #ffffff;
}

.featurepanel {
	height: auto;
}

.featurepanelimagemobile {
	display: block;
}

#featuretodosmobile {
	background-image: url(../images/featurepanel-todolist-mobile.png);
	background-size: 189px 222px;
	background-position: center bottom;
	background-repeat: no-repeat;
	height: 232px;
}

#featureweightselectormobile {
	background-image: url(../images/featurepanel-visualweightselectors-mobile.png);
	background-size: 247px 222px;
	background-position: center bottom;
	background-repeat: no-repeat;
	height: 222px;
}

#featureresttimermobile {
	background-image: url(../images/featurepanel-resttimer-mobile.png);
	background-size: 189px 222px;
	background-position: center bottom;
	background-repeat: no-repeat;
	height: 232px;
}

#featureexercisemanualmobile {
	background-image: url(../images/featurepanel-exercisemanual-mobile.png);
	background-size: 247px 222px;
	background-position: center bottom;
	background-repeat: no-repeat;
	height: 222px;
}

#featureehistorymobile {
	background-image: url(../images/featurepanel-history-mobile.png);
	background-size: 280px 134px;
	background-position: center;
	background-repeat: no-repeat;
	height: 222px;
}

#featuretextexercisemanual, #textpanelweights {
	padding-right: 0px;
}

/** AT A GLANCE
------------------------------*/

.ataglancepaneltop, .ataglancepanelgrey, .ataglancepanelwhite {
	height: auto;
	clear: left;
}

.ataglancepaneltop {
	background-image: url(../images/bg-featurepanelshadow-mobile.png);
	background-size: 320px 154px;
	background-position: center top;
}

.ataglancepanelshadow, .ataglancepanelnoshadow {
	background-image: none;
	width: 300px;
	height: auto;
}

.ataglancepaneltop h2, .ataglancepanelgrey h2, .ataglancepanelwhite h2 {
	font-size: 14px;
	margin-bottom: 5px;
	padding-left: 10px;
}

.ataglancepaneltop h3, .ataglancepanelgrey h3, .ataglancepanelwhite h3 {
	font-size: 22px;
	padding-left: 10px;
}

.ataglancepaneltop h3 {
	padding-top: 5px;
}

.ataglancepanelgrey h3, .ataglancepanelwhite h3 {
	padding-top: 20px;
}

.featurecolumn {
	width: 270px;
	float: none;
	padding-left: 10px;
	padding-right: 20px;
}



/** WORKOUT PROGRAMS
------------------------------*/


.workoutprogrampanel {
	width: auto;
	padding: 0px;
}

.programsheader {
	padding: 10px;
}

.programsheader h2 {
	padding: 0px;
}

.workoutprogramcolumn {
	width: auto;
	padding: 0px 0px 10px 0px;
	font-size: 14px;
	line-height: 18px;
	float: none;
}

.programpanel p {
	display: none;
}

.programpanel {
	display: block;
	width: 116px;
	height: 90px;
	background-image: url(../images/programpanel-mobile.png);
	background-size: 140px 114px;
	background-position: top left;
	background-repeat: no-repeat;
	float: left;
	padding: 12px;
	margin-right: 0px;
	margin-bottom: 5px;
}

.programpanel:hover {
	background-image: url(../images/programpanel-hover-mobile.png);	
	background-size: 140px 114px;
}

#programimagebeginners, #programimagesplits, #programimagegoals, #programimagebodyareas, #programimageapproaches {
	width: 116px;
	height: 73px;
	background-size: 116px 73px;
	margin-bottom: 0px;
}

.programpanel h3 {
	margin-top: 4px;
}

.programpanelgroup {
	height: 500px;
	padding: 0px;
	width: auto;
}

.programpanelgroup {
	width: 290px;
	margin-left: auto;
	margin-right: auto;
}

#programpanelmobileheader {
	display: block;
}

#programpanelmobileheader:hover {
	background-image: url(../images/programpanel-mobile.png);
	background-size: 140px 114px;	
}

.programpanelspacer {
	display: block;
	width: 10px;
	height: 114px;
	float: left;
	margin-bottom: 5px;
}

#programindicator1, #programindicator2, #programindicator3, #programindicator4, #programindicator5 {
	width: 305px;
	height: 12px;
	background-image: url(../images/programindicator-mobile.png);
	background-size: 320px 12px;
	background-position: center top;
}

.programdraw {
	width: auto;
	height: auto;
	background-image: none;
	background-color: #ececec;
	margin: 0px;
	padding: 0px;
}

.programdrawinner {
	width: auto;
	height: auto;
	padding: 0px;
}

#programdrawbeginners .illustration {
	display: none;
}

#programdrawbeginners {
	width: auto;
}

#programdrawbeginners h2, #programdrawbeginners h3, #programdrawbeginners p {
	padding-left: 10px;
	padding-right: 10px;
}

#programdrawbeginners h2, #programdrawsplits h2, #programdrawbodyareas h2, #programdrawgoals h2, #programdrawapproaches h2 {
	padding-top: 10px;
	padding-left: 10px;
}

.programdrawbuttons {
	padding-left: 10px;
	padding-bottom: 10px;
}

.programdrawthreecolumn {
	width: auto;
	float: none;
	padding: 0px 10px 10px 10px;
}

/** SCREEENSHOTS
------------------------------*/

.screenshots {
    background-image:url(../images/bg-featurepanelshadow-mobile.png);
	background-size: 320px 54px;
	background-position:center top;
	background-repeat:no-repeat;
	padding-top: 0px;
}

.screenshots .section-innerx {
	background: none;
	margin-left: auto;
	margin-right: auto;
	width: 260px;
	padding-top: 20px;
}

.screen a {
	width: 120px;
	height: 205px;
}

#screen-home, #screen-workout, #screen-supersets, #screen-weightselector, #screen-exercisesearch, #screen-exercise, #screen-kettlebells, #screen-weightstack, #screen-exercises, #screen-dataexport {
	background-size: 120px 205px;	
}

.screenshots .clear-fix {
	display: none;
}

.screenshots .first-second-row {
	margin-left: 0px;
}

.screenshots #screen-chart {
	width: 248px;
	height: 140px;
	background-size: 248px 140px;
}



/** FOOTER
------------------------------*/


#footer {
    background-image:url(../images/bg-featurepanelshadow-mobile.png);
	background-size: 320px 54px;
	background-position:center top;
	background-repeat:no-repeat;
	padding-top: 0px;	
}

.fb {
	width: 260px;
}

#footer .section-innerx {
	background: none;
	min-height: auto;
	padding: 20px 20px;
	width: auto;
}

#footer p {
	font-size: 12px;
}

}

